questions and right answers posting

--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
 
 
   <!-- Questions will get Rendered Here  -->
-  <div id="questions-view"></div>
+  <div class="questions-wrapper">
+    <div id="questions-view">
+      <div id="answers-view">
+
+      </div>
+    </div>
+  </div>
 
 
   <!-- Jquery -->
