added my app.js and html

--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
 <body>
 
   <!-- Questions will get Rendered Here  -->
-  <div class="questions-wrapper">
-    <div id="questions-view">
-      <div id="answers-view">
-      </div>
-    </div>
+  <div class="questions-dump">
+    <div id="questions-view"></div>
+    <div id="answers-view"></div>
   </div>
+
 
 
   <!-- JavaScript Files -->
