--- a/index.html
+++ b/index.html
@@ -6,10 +6,95 @@
   <title>The Awesome Game!</title>
 
   <!-- Latest compiled and minified CSS -->
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <title>Document</title>
+
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+
 </head>
 
 <body>
+<div id = "title" class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-3">TEAM 2 PROJECT 1 #MEXICOCITY</h1>
+  </div>
+</div>
+
+<div class="container-fluid">
+<table>
+  <tr>
+    <th>Category 1</th>
+    <th>category 2</th>
+    <th>Category 3</th>
+    <th>Category 4</th>
+    <th>Category 5</th>
+    <th>Category 6</th>
+  </tr>
+  <tbody id = "gameGrid">
+    <tr> 
+      <td><button>$100</button></td>
+      <td><button>$100</button></td>
+      <td><button>$100</button></td>
+      <td><button>$100</button></td>
+      <td><button>$100</button></td>
+      <td><button>$100</button></td>
+    </tr>
+     <tr> 
+      <td><button>$200</button></td>
+      <td><button>$200</button></td>
+      <td><button>$200</button></td>
+      <td><button>$200</button></td>
+      <td><button>$200</button></td>
+      <td><button>$200</button></td>
+    </tr>
+ <tr> 
+      <td><button>$300</button></td>
+      <td><button>$300</button></td>
+      <td><button>$300</button></td>
+      <td><button>$300</button></td>
+      <td>$300</td>
+      <td>$300</td>
+    </tr>
+ <tr> 
+      <td>$400</td>
+      <td>$400</td>
+      <td>$400</td>
+      <td>$400</td>
+      <td>$400</td>
+      <td>$400</td>
+    </tr>
+ <tr> 
+      <td>$500</td>
+      <td>$500</td>
+      <td>$500</td>
+      <td>$500</td>
+      <td>$500</td>
+      <td>$500</td>
+    </tr>
+
+
+  </tbody>
+</table>
+</div>
+<div class="row" 
+</div>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+
+
+
+
+
 
   <!-- Questions will get Rendered Here  -->
   <div class="questions-dump">
