Added all of the buttons and the player 1 and player 2 scores

--- a/index.html
+++ b/index.html
@@ -16,79 +16,93 @@
 </head>
 
 <body>
-<div id = "title" class="jumbotron jumbotron-fluid">
-  <div class="container">
-    <h1 class="display-3">TEAM 2 PROJECT 1 #MEXICOCITY</h1>
+  <div id="title" class="jumbotron jumbotron-fluid">
+    <div class="container">
+      <h1 class="display-3">TEAM 2 PROJECT 1 #MEXICOCITY</h1>
+    </div>
   </div>
-</div>
 
-<div class="container-fluid">
-<table>
-  <tr>
-    <th>Category 1</th>
-    <th>category 2</th>
-    <th>Category 3</th>
-    <th>Category 4</th>
-    <th>Category 5</th>
-    <th>Category 6</th>
-  </tr>
-  <tbody id = "gameGrid">
-    <tr> 
-      <td><button>$100</button></td>
-      <td><button>$100</button></td>
-      <td><button>$100</button></td>
-      <td><button>$100</button></td>
-      <td><button>$100</button></td>
-      <td><button>$100</button></td>
-    </tr>
-     <tr> 
-      <td><button>$200</button></td>
-      <td><button>$200</button></td>
-      <td><button>$200</button></td>
-      <td><button>$200</button></td>
-      <td><button>$200</button></td>
-      <td><button>$200</button></td>
-    </tr>
- <tr> 
-      <td><button>$300</button></td>
-      <td><button>$300</button></td>
-      <td><button>$300</button></td>
-      <td><button>$300</button></td>
-      <td>$300</td>
-      <td>$300</td>
-    </tr>
- <tr> 
-      <td>$400</td>
-      <td>$400</td>
-      <td>$400</td>
-      <td>$400</td>
-      <td>$400</td>
-      <td>$400</td>
-    </tr>
- <tr> 
-      <td>$500</td>
-      <td>$500</td>
-      <td>$500</td>
-      <td>$500</td>
-      <td>$500</td>
-      <td>$500</td>
-    </tr>
+  <div class="row">
+    <div class="col-md-3">
+    </div>
+    <div class="col-md-6">
+      <table>
+        <tr>
+          <th>Category 1</th>
+          <th>category 2</th>
+          <th>Category 3</th>
+          <th>Category 4</th>
+          <th>Category 5</th>
+          <th>Category 6</th>
+        </tr>
+        <tbody id="gameGrid">
+          <tr>
+            <td><button>$100</button></td>
+            <td><button>$100</button></td>
+            <td><button>$100</button></td>
+            <td><button>$100</button></td>
+            <td><button>$100</button></td>
+            <td><button>$100</button></td>
+          </tr>
+          <tr>
+            <td><button>$200</button></td>
+            <td><button>$200</button></td>
+            <td><button>$200</button></td>
+            <td><button>$200</button></td>
+            <td><button>$200</button></td>
+            <td><button>$200</button></td>
+          </tr>
+          <tr>
+            <td><button>$300</button></td>
+            <td><button>$300</button></td>
+            <td><button>$300</button></td>
+            <td><button>$300</button></td>
+            <td><button>$300</button></td>
+            <td><button>$300</button></td>
+          </tr>
+          <tr>
+            <td><button>$400</button></td>
+            <td><button>$400</button></td>
+            <td><button>$400</button></td>
+            <td><button>$400</button></td>
+            <td><button>$400</button></td>
+            <td><button>$400</button></td>
+          </tr>
+          <tr>
+            <td><button>$500</button></td>
+            <td><button>$500</button></td>
+            <td><button>$500</button></td>
+            <td><button>$500</button></td>
+            <td><button>$500</button></td>
+            <td><button>$500</button></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="col-md-3">
+    </div>
+  </div>
 
+  <br>
+  <br>
 
-  </tbody>
-</table>
-</div>
-<div class="row" 
-</div>
+  <div class="row">
+    <div class="col-md-2"></div>
+    <div id = "player1" class = "col-md-2">Player 1</div>
+    <div id = "player1Score" class = "col-md-2">Score</div>
+    <div id = "player2" class = "col-md-2">Player 2</div>
+    <div id = "player2Score" class = "col-md-2">Score</div>
+    <div class="col-md-2"></div>
+  </div>
 
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
 
 
 
