--- a/index.html
+++ b/index.html
@@ -1,27 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <title>The Awesome Game!</title>
-
   <!-- Latest compiled and minified CSS -->
-
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-  <title>Document</title>
-
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
+  <title>Super Awesome Game!</title>
 </head>
-
 <body>
-  <div id="title" class="jumbotron jumbotron-fluid">
+  <!-- Start FB Login Code; this should all be right after the opening body tag -->
+  <script>
+    window.fbAsyncInit = function() {
+      FB.init({
+        appId: '218361788702874',
+        cookie: true,
+        xfbml: true,
+        version: 'v2.10'
+      });
+      function checkLoginState() {
+        FB.getLoginStatus(function(response) {
+          statusChangeCallback(response);
+        });
+      }
+    };
+    (function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) {
+        return;
+      }
+      js = d.createElement(s);
+      js.id = id;
+      js.src = "https://connect.facebook.net/en_US/sdk.js";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
+    function statusChangeCallback(response) {
+      if (response.status === 'connected') {
+        console.log('logged in and authenticated')
+      } else {
+        console.log('not authenticated')
+      }
+    }
+    function checkLoginState() {
+      FB.getLoginStatus(function(response) {
+        statusChangeCallback(response);
+      });
+    }
+    // FB Logout Function
+    function logout() {
+      FB.logout(function(response) {
+        checkLoginState()
+      })
+    }
+  </script>
+  <!-- FB Logout Function -->
+  <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+  </fb:login-button>
+  <!-- FB like and share buttons -->
+  <div class="fb-like" data-share="true" data-width="450" data-show-faces="true">
+  </div>
+  <!-- End FB Login Code -->
+  <!-- Logout Button -->
+  <button type="button" class="btn btn-primary" id="logout" onclick="logout()">Logout</button>
+  <!-- END FACEBOOK LOGIN -->
+  <div id="title">
     <div class="container">
       <h1 class="display-3">TEAM 2 PROJECT 1 #MEXICOCITY</h1>
     </div>
   </div>
-
   <div class="row">
     <div class="col-md-3">
     </div>
@@ -82,19 +129,16 @@
     <div class="col-md-3">
     </div>
   </div>
-
   <br>
   <br>
-
   <div class="row">
     <div class="col-md-2"></div>
-    <div id = "player1" class = "col-md-2">Player 1</div>
-    <div id = "player1Score" class = "col-md-2">Score</div>
-    <div id = "player2" class = "col-md-2">Player 2</div>
-    <div id = "player2Score" class = "col-md-2">Score</div>
+    <div id="player1" class="players col-md-2">Player 1</div>
+    <div id="player1Score" class="scores col-md-2">Score</div>
+    <div id="player2" class="players col-md-2">Player 2</div>
+    <div id="player2Score" class="scores col-md-2">Score</div>
     <div class="col-md-2"></div>
   </div>
-
   <br>
   <br>
   <br>
@@ -103,51 +147,19 @@
   <br>
   <br>
   <br>
-
-
-
-
-
-
-
-  <div class="container-fluid">
-    <div class="container">
-
-
-
-
-
-
-
-
-
-      <!-- Questions will get Rendered Here  -->
-      <div class="questions-wrapper">
-        <div id="questions-view">
-          <div id="answers-view">
-
-          </div>
-        </div>
+  <!-- Questions will get Rendered Here  -->
+  <div class="questions-wrapper">
+    <div id="questions-view">
+      <div id="answers-view">
       </div>
-
-
-
-
-
-
-
-
-
-
     </div>
   </div>
-
-
   <!-- JavaScript Files -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.6.1/firebase.js"></script>
   <script src="assets/js/app.js"></script>
 </body>
-
 </html>
+Add Comment Collapse
