--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <title>The Awesome Game!</title>
+  <meta charset="UTF-8">Brain Jam!</title>
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+  <link rel="stylesheet" href="assets/css/reset.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <link rel="icon" type="image/icon" href="assets/images/brain.ico">
   <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
-  <title>Super Awesome Game!</title>
+
+
+  <title>Brain Jam!</title>
 </head>
+
 <body>
   <!-- Start FB Login Code; this should all be right after the opening body tag -->
   <script>
@@ -19,6 +24,7 @@
         xfbml: true,
         version: 'v2.10'
       });
+
       function checkLoginState() {
         FB.getLoginStatus(function(response) {
           statusChangeCallback(response);
@@ -35,6 +41,7 @@
       js.src = "https://connect.facebook.net/en_US/sdk.js";
       fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));
+
     function statusChangeCallback(response) {
       if (response.status === 'connected') {
         console.log('logged in and authenticated')
@@ -42,6 +49,7 @@
         console.log('not authenticated')
       }
     }
+
     function checkLoginState() {
       FB.getLoginStatus(function(response) {
         statusChangeCallback(response);
@@ -66,7 +74,7 @@
   <!-- END FACEBOOK LOGIN -->
   <div id="title">
     <div class="container">
-      <h1 class="display-3">TEAM 2 PROJECT 1 #MEXICOCITY</h1>
+      <h1 class="display-3">BRAIN JAM!</h1>
     </div>
   </div>
   <div class="row">
@@ -161,5 +169,6 @@
   <script src="https://www.gstatic.com/firebasejs/4.6.1/firebase.js"></script>
   <script src="assets/js/app.js"></script>
 </body>
+
 </html>
 Add Comment Collapse
