--- a/index.html
+++ b/index.html
@@ -2,22 +2,14 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">Brain Jam!</title>
+  <meta charset="UTF-8">
+  <title>Brain Jam!</title>
   <!-- Latest compiled and minified CSS -->
-
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/css/reset.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
   <link rel="icon" type="image/icon" href="assets/images/brain.ico">
   <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
-<<<<<<< HEAD
-
-
-  <title>Brain Jam!</title>
-=======
-  <title>Super Awesome Game!</title>
-
->>>>>>> 13f5cf050d52e13689d19734ad4936bd088456e4
 </head>
 
 <body>
@@ -37,9 +29,7 @@
           statusChangeCallback(response);
         });
       }
-
     };
-
     (function(d, s, id) {
       var js, fjs = d.getElementsByTagName(s)[0];
       if (d.getElementById(id)) {
@@ -89,9 +79,15 @@
       <h1 class="display-3">BRAIN JAM!</h1>
     </div>
   </div>
-  <div class="row">
-    <div class="col-md-3">
+
+  <div class="row question-popup-row">
+    <div class="col-md-12">
+      <div class="question-popup"></div>
     </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-3"></div>
     <div class="col-md-6">
       <table>
         <tr>
@@ -188,4 +184,3 @@
 </body>
 
 </html>
-
