--- a/index.html
+++ b/index.html
@@ -85,7 +85,10 @@
     <div class="col-md-12">
       <div class="question-popup"></div>
       <div class="question"></div>
-      <div class="choices"></div>
+      <div class="choices-div">
+        <ul id="choices">
+        </ul>
+      </div>
     </div>
   </div>
 
