--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     </div>
   </div>
 
-  <div class="row">
+  <div style="margin: 0 auto;" class="row">
 
     <div class="col-md-12">
       <table>
