fixed html and css for question and answers

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <div class="col-md-12">
       <div class="question-popup"></div>
       <div class="question"></div>
-      <div class="choices-div">
+      <div id="choices-div">
 
       </div>
     </div>
