Fixed the colors and added chatbox.

--- a/index.html
+++ b/index.html
@@ -84,6 +84,14 @@
     </div>
   </div>
 
+  <br>
+  <br>
+
+  <div id: "facebook"></div>
+
+  <br>
+  <br>
+
   <div class="row question-popup-row">
     <div class="col-md-12">
       <div class="question-popup"></div>
@@ -96,7 +104,9 @@
 
   <div style="margin: 0 auto;" class="row">
 
-    <div class="col-md-12">
+    <div id = "chatbox" class = "col-md-4"></div>
+
+    <div class="col-md-6">
       <table>
         <tr>
           <th>Category 1</th>
