--- a/auth.html
+++ b/auth.html
@@ -34,6 +34,6 @@
 
 
 
-<script type="text/javascript" src="firebase_chat_fbauth_test1.js"></script>
+<script type="text/javascript" src="assets/js/auth.js"></script>
 </body>
 </html>
