--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" type="text/css" href="assets/css/questionAndChoices.css">
   <link rel="icon" type="image/icon" href="assets/images/brain.ico">
   <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Delius">
 </head>
 
 <body>
@@ -92,7 +93,7 @@
   <br>
   <br>
 
-  <div class="row question-popup-row">
+  <div id = "questions" class="row question-popup-row">
     <div class="col-md-12">
       <div class="question-popup"></div>
       <div class="question"></div>
@@ -104,7 +105,7 @@
 
   <div style="margin: 0 auto;" class="row">
 
-    <div id = "chatbox" class = "col-md-4"></div>
+    <div id = "chatbox" class = "col-md-4">This is where we will have all of the chat.</div>
 
     <div class="col-md-6">
       <table>
