Formating and html for facebook buttons.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
   <br>
   <br>
 
-  <div id: "facebook"></div>
+  <div id: "facebook">
+    <button class="loginBtn loginBtn--facebook">
+      Login with Facebook
+    </button>
+  </div>
 
   <br>
   <br>
@@ -49,24 +53,24 @@
 
       <!-- this is where our messages will be displayed -->
       <div class="row text-center">
-        <div class="col-md-offset-3 col-md-6">
-          <div id="chat-box" class="text-left well"></div>
+        <div class="col-md-6">
+          <div id="chat-box" class="text-left well">
+          </div>
         </div>
       </div>
-      <!-- <div id="chat-box" class="text-left well col-md-4">This is where we will have all of the chat.</div> -->
 
       <br>
 
       <!-- form to input our user name -->
       <form id="name-form">
         <input type="text" placeholder="Enter Name" id="name-input">
-        <button id="name-submit">Submit</button>
+        <button id="name-submit" class = "gameButton">Submit</button>
       </form>
 
       <!-- form to input our messages -->
       <form id="message-form">
         <input type="text" placeholder="Enter message" id="message-input">
-        <button id="message-submit">Send</button>
+        <button id="message-submit" class = "gameButton>Send</button>
       </form>
 
 
@@ -85,48 +89,48 @@
         <tbody id="gameGrid">
 
           <tr>
-            <td><button>$100</button></td>
-            <td><button>$100</button></td>
-            <td><button>$100</button></td>
-            <td><button>$100</button></td>
-            <td><button>$100</button></td>
-            <td><button>$100</button></td>
+            <td><button class = "gameButton">$100</button></td>
+            <td><button class = "gameButton" >$100</button></td>
+            <td><button class = "gameButton">$100</button></td>
+            <td><button class = "gameButton">$100</button></td>
+            <td><button class = "gameButton">$100</button></td>
+            <td><button class = "gameButton">$100</button></td>
           </tr>
 
           <tr>
-            <td><button>$200</button></td>
-            <td><button>$200</button></td>
-            <td><button>$200</button></td>
-            <td><button>$200</button></td>
-            <td><button>$200</button></td>
-            <td><button>$200</button></td>
+            <td><button class = "gameButton">$200</button></td>
+            <td><button class = "gameButton">$200</button></td>
+            <td><button class = "gameButton">$200</button></td>
+            <td><button class = "gameButton">$200</button></td>
+            <td><button class = "gameButton">$200</button></td>
+            <td><button class = "gameButton">$200</button></td>
           </tr>
 
           <tr>
-            <td><button>$300</button></td>
-            <td><button>$300</button></td>
-            <td><button>$300</button></td>
-            <td><button>$300</button></td>
-            <td><button>$300</button></td>
-            <td><button>$300</button></td>
+            <td><button class = "gameButton">$300</button></td>
+            <td><button class = "gameButton">$300</button></td>
+            <td><button class = "gameButton">$300</button></td>
+            <td><button class = "gameButton">$300</button></td>
+            <td><button class = "gameButton">$300</button></td>
+            <td><button class = "gameButton">$300</button></td>
           </tr>
 
           <tr>
-            <td><button>$400</button></td>
-            <td><button>$400</button></td>
-            <td><button>$400</button></td>
-            <td><button>$400</button></td>
-            <td><button>$400</button></td>
-            <td><button>$400</button></td>
+            <td><button class = "gameButton">$400</button></td>
+            <td><button class = "gameButton">$400</button></td>
+            <td><button class = "gameButton">$400</button></td>
+            <td><button class = "gameButton">$400</button></td>
+            <td><button class = "gameButton">$400</button></td>
+            <td><button class = "gameButton">$400</button></td>
           </tr>
 
           <tr>
-            <td><button>$500</button></td>
-            <td><button>$500</button></td>
-            <td><button>$500</button></td>
-            <td><button>$500</button></td>
-            <td><button>$500</button></td>
-            <td><button>$500</button></td>
+            <td><button class = "gameButton">$500</button></td>
+            <td><button class = "gameButton">$500</button></td>
+            <td><button class = "gameButton">$500</button></td>
+            <td><button class = "gameButton">$500</button></td>
+            <td><button class = "gameButton">$500</button></td>
+            <td><button class = "gameButton">$500</button></td>
           </tr>
 
         </tbody>
