--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
       <!-- form to input our user name -->
       <form id="name-form">
         <input type="text" placeholder="Enter Name" id="name-input">
-        <button id="name-submit" class = "gameButton">Submit</button>
+        <button id="name-submit">Submit</button>
       </form>
 
       <!-- form to input our messages -->
       <form id="message-form">
         <input type="text" placeholder="Enter message" id="message-input">
-        <button id="message-submit" class = "gameButton>Send</button>
+        <button id="message-submit">Send</button>
       </form>
 
 
