Added difficulty lvl for buttons

--- a/index.html
+++ b/index.html
@@ -89,48 +89,48 @@
         <tbody id="gameGrid">
 
           <tr>
-            <td><button class = "gameButton">$100</button></td>
-            <td><button class = "gameButton" >$100</button></td>
-            <td><button class = "gameButton">$100</button></td>
-            <td><button class = "gameButton">$100</button></td>
-            <td><button class = "gameButton">$100</button></td>
-            <td><button class = "gameButton">$100</button></td>
+            <td><button class = "gameButton easy">$100</button></td>
+            <td><button class = "gameButton easy" >$100</button></td>
+            <td><button class = "gameButton easy">$100</button></td>
+            <td><button class = "gameButton easy">$100</button></td>
+            <td><button class = "gameButton easy">$100</button></td>
+            <td><button class = "gameButton easy">$100</button></td>
           </tr>
 
           <tr>
-            <td><button class = "gameButton">$200</button></td>
-            <td><button class = "gameButton">$200</button></td>
-            <td><button class = "gameButton">$200</button></td>
-            <td><button class = "gameButton">$200</button></td>
-            <td><button class = "gameButton">$200</button></td>
-            <td><button class = "gameButton">$200</button></td>
+            <td><button class = "gameButton easy">$200</button></td>
+            <td><button class = "gameButton easy">$200</button></td>
+            <td><button class = "gameButton easy">$200</button></td>
+            <td><button class = "gameButton easy">$200</button></td>
+            <td><button class = "gameButton easy">$200</button></td>
+            <td><button class = "gameButton easy">$200</button></td>
           </tr>
 
           <tr>
-            <td><button class = "gameButton">$300</button></td>
-            <td><button class = "gameButton">$300</button></td>
-            <td><button class = "gameButton">$300</button></td>
-            <td><button class = "gameButton">$300</button></td>
-            <td><button class = "gameButton">$300</button></td>
-            <td><button class = "gameButton">$300</button></td>
+            <td><button class = "gameButton medium">$300</button></td>
+            <td><button class = "gameButton medium">$300</button></td>
+            <td><button class = "gameButton medium">$300</button></td>
+            <td><button class = "gameButton medium">$300</button></td>
+            <td><button class = "gameButton medium">$300</button></td>
+            <td><button class = "gameButton medium">$300</button></td>
           </tr>
 
           <tr>
-            <td><button class = "gameButton">$400</button></td>
-            <td><button class = "gameButton">$400</button></td>
-            <td><button class = "gameButton">$400</button></td>
-            <td><button class = "gameButton">$400</button></td>
-            <td><button class = "gameButton">$400</button></td>
-            <td><button class = "gameButton">$400</button></td>
+            <td><button class = "gameButton hard">$400</button></td>
+            <td><button class = "gameButton hard">$400</button></td>
+            <td><button class = "gameButton hard">$400</button></td>
+            <td><button class = "gameButton hard">$400</button></td>
+            <td><button class = "gameButton hard">$400</button></td>
+            <td><button class = "gameButton hard">$400</button></td>
           </tr>
 
           <tr>
-            <td><button class = "gameButton">$500</button></td>
-            <td><button class = "gameButton">$500</button></td>
-            <td><button class = "gameButton">$500</button></td>
-            <td><button class = "gameButton">$500</button></td>
-            <td><button class = "gameButton">$500</button></td>
-            <td><button class = "gameButton">$500</button></td>
+            <td><button class = "gameButton hard">$500</button></td>
+            <td><button class = "gameButton hard">$500</button></td>
+            <td><button class = "gameButton hard">$500</button></td>
+            <td><button class = "gameButton hard">$500</button></td>
+            <td><button class = "gameButton hard">$500</button></td>
+            <td><button class = "gameButton hard">$500</button></td>
           </tr>
 
         </tbody>
