--- a/index.html
+++ b/index.html
@@ -27,11 +27,16 @@
 
   <br>
   <br>
+<div class = "col-md-5">
+</div>
 
-  <div id: "facebook">
+  <div id = "facebook" class = "col-md-2">
     <button class="loginBtn loginBtn--facebook">
       Login with Facebook
     </button>
+  </div>
+
+  <div class = "col-md-5">
   </div>
 
   <br>
