--- a/index.html
+++ b/index.html
@@ -174,6 +174,8 @@
   <script src="assets/js/database.js"></script>
   <script src="assets/js/app.js"></script>
   <script src="assets/js/chat.js"></script>
+  <script src="assets/js/auth.js"></script>
+
 
 </body>
 
