html sucks here

--- a/index.html
+++ b/index.html
@@ -90,69 +90,70 @@
       <!-- THE GAME BOARD -->
 
       <div class="col-md-8">
-        <table>
-          <tr>
-            <th>Category 1</th>
-            <th>category 2</th>
-            <th>Category 3</th>
-            <th>Category 4</th>
-            <th>Category 5</th>
-            <th>Category 6</th>
-          </tr>
-
-          <tbody id="gameGrid">
+        <div class="table-width">
+          <table>
 
             <tr>
-              <td><button class="gameButton easy">$100</button></td>
-              <td><button class="gameButton easy">$100</button></td>
-              <td><button class="gameButton easy">$100</button></td>
-              <td><button class="gameButton easy">$100</button></td>
-              <td><button class="gameButton easy">$100</button></td>
-              <td><button class="gameButton easy">$100</button></td>
+              <th>Category 1</th>
+              <th>category 2</th>
+              <th>Category 3</th>
+              <th>Category 4</th>
+              <th>Category 5</th>
+              <th>Category 6</th>
             </tr>
 
-            <tr>
-              <td><button class="gameButton easy">$200</button></td>
-              <td><button class="gameButton easy">$200</button></td>
-              <td><button class="gameButton easy">$200</button></td>
-              <td><button class="gameButton easy">$200</button></td>
-              <td><button class="gameButton easy">$200</button></td>
-              <td><button class="gameButton easy">$200</button></td>
-            </tr>
 
-            <tr>
-              <td><button class="gameButton medium">$300</button></td>
-              <td><button class="gameButton medium">$300</button></td>
-              <td><button class="gameButton medium">$300</button></td>
-              <td><button class="gameButton medium">$300</button></td>
-              <td><button class="gameButton medium">$300</button></td>
-              <td><button class="gameButton medium">$300</button></td>
-            </tr>
+            <tbody id="gameGrid">
 
-            <tr>
-              <td><button class="gameButton hard">$400</button></td>
-              <td><button class="gameButton hard">$400</button></td>
-              <td><button class="gameButton hard">$400</button></td>
-              <td><button class="gameButton hard">$400</button></td>
-              <td><button class="gameButton hard">$400</button></td>
-              <td><button class="gameButton hard">$400</button></td>
-            </tr>
+              <tr>
+                <td><button class="gameButton easy">$100</button></td>
+                <td><button class="gameButton easy">$100</button></td>
+                <td><button class="gameButton easy">$100</button></td>
+                <td><button class="gameButton easy">$100</button></td>
+                <td><button class="gameButton easy">$100</button></td>
+                <td><button class="gameButton easy">$100</button></td>
+              </tr>
 
-            <tr>
-              <td><button class="gameButton hard">$500</button></td>
-              <td><button class="gameButton hard">$500</button></td>
-              <td><button class="gameButton hard">$500</button></td>
-              <td><button class="gameButton hard">$500</button></td>
-              <td><button class="gameButton hard">$500</button></td>
-              <td><button class="gameButton hard">$500</button></td>
-            </tr>
+              <tr>
+                <td><button class="gameButton easy">$200</button></td>
+                <td><button class="gameButton easy">$200</button></td>
+                <td><button class="gameButton easy">$200</button></td>
+                <td><button class="gameButton easy">$200</button></td>
+                <td><button class="gameButton easy">$200</button></td>
+                <td><button class="gameButton easy">$200</button></td>
+              </tr>
 
-          </tbody>
-        </table>
+              <tr>
+                <td><button class="gameButton medium">$300</button></td>
+                <td><button class="gameButton medium">$300</button></td>
+                <td><button class="gameButton medium">$300</button></td>
+                <td><button class="gameButton medium">$300</button></td>
+                <td><button class="gameButton medium">$300</button></td>
+                <td><button class="gameButton medium">$300</button></td>
+              </tr>
+
+              <tr>
+                <td><button class="gameButton hard">$400</button></td>
+                <td><button class="gameButton hard">$400</button></td>
+                <td><button class="gameButton hard">$400</button></td>
+                <td><button class="gameButton hard">$400</button></td>
+                <td><button class="gameButton hard">$400</button></td>
+                <td><button class="gameButton hard">$400</button></td>
+              </tr>
+
+              <tr>
+                <td><button class="gameButton hard">$500</button></td>
+                <td><button class="gameButton hard">$500</button></td>
+                <td><button class="gameButton hard">$500</button></td>
+                <td><button class="gameButton hard">$500</button></td>
+                <td><button class="gameButton hard">$500</button></td>
+                <td><button class="gameButton hard">$500</button></td>
+              </tr>
+
+            </tbody>
+          </table>
+        </div>
       </div>
-
-
-
 
 
     </div>
