--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 
     <!-- CHAT BOX AND GAME BOARD ROW -->
-    <div class="row">
+    <div id="chat-and-game" class="row">
 
 
 
@@ -168,16 +168,6 @@
 
 
     </div>
-
-    <!-- Player Names and Scores -->
-    <!-- <div class="row">
-      <div class="fixed-bottom col-md-12">
-        <div id="player1" class="players col-md-2">Player 1</div>
-        <div id="player1Score" class="scores col-md-2">Score</div>
-        <div id="player2" class="players col-md-2">Player 2</div>
-        <div id="player2Score" class="scores col-md-2">Score</div>
-      </div>
-    </div> -->
 
 
 
