--- a/index.html
+++ b/index.html
@@ -180,11 +180,11 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
   <script src="https://www.gstatic.com/firebasejs/4.6.1/firebase.js"></script>
-  <script src="assets/js/database.js"></script>
+  <!-- <script src="assets/js/database.js"></script>
   <script src="assets/js/app.js"></script>
-  <script src="assets/js/chat.js"></script>
+  <script src="assets/js/chat.js"></script> -->
   <script src="assets/js/firebase.js"></script>
-  <script src="assets/js/auth.js"></script>
+  <!-- <script src="assets/js/auth.js"></script> -->
 
 </body>
 
