deleted extra div in html

--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
     <!-- Facebook Login Button -->
     <div class="row facebook-login-row">
       <div class="col-md-12">
-        <button class="loginBtn loginBtn--facebook">Login with Facebook</button>
-        </di>
+        <button class="loginBtn loginBtn--facebook" id="facebookBtn">Login with Facebook</button>
       </div>
     </div>
 
