--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <div class="row facebook-login-row">
       <div class="col-md-12">
         <button class="loginBtn loginBtn--facebook" id="facebookBtn">Login with Facebook</button>
+        <button class="loginBtn loginBtn--facebook" id="logOffFacebook">Log off</button>
       </div>
     </div>
 
