Fixed game board for 6 rows, commented out the chat box.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
       </div>
     </div>
 
+    <div class="row">
+      <div class="col-md-12">
+        <div id="start">
+          <button id = "startBtn">START</button>
+        </div>
+      </div>
+    </div>
 
     <!-- Facebook Login Button -->
     <div class="row facebook-login-row">
@@ -61,32 +68,24 @@
 
 
         <!-- this is where our messages will be displayed -->
-        <div id="chat-box" class="text-left well"></div>
+        <!-- <div id="chat-box" class="text-left well"></div> -->
 
         <!-- form to input our user name -->
-        <form id="name-form">
+        <!-- <form id="name-form">
           <input type="text" placeholder="Enter Name" id="name-input">
           <button id="name-submit">Submit</button>
-        </form>
+        </form> -->
 
         <!-- form to input our messages -->
-        <form id="message-form">
+        <!-- <form id="message-form">
           <input type="text" placeholder="Enter message" id="message-input">
           <button id="message-submit">Send</button>
         </form>
-      </div>
+      </div> -->
 
       <!-- THE GAME BOARD -->
       <div class="col-md-8">
         <table>
-          <tr>
-            <th>Category 1</th>
-            <th>category 2</th>
-            <th>Category 3</th>
-            <th>Category 4</th>
-            <th>Category 5</th>
-            <th>Category 6</th>
-          </tr>
           <tbody id="gameGrid">
             <tr>
               <td><button class="gameButton easy">$100</button></td>
@@ -113,12 +112,12 @@
               <td><button class="gameButton medium">$300</button></td>
             </tr>
             <tr>
-              <td><button class="gameButton hard">$400</button></td>
-              <td><button class="gameButton hard">$400</button></td>
-              <td><button class="gameButton hard">$400</button></td>
-              <td><button class="gameButton hard">$400</button></td>
-              <td><button class="gameButton hard">$400</button></td>
-              <td><button class="gameButton hard">$400</button></td>
+              <td><button class="gameButton medium">$400</button></td>
+              <td><button class="gameButton medium">$400</button></td>
+              <td><button class="gameButton medium">$400</button></td>
+              <td><button class="gameButton medium">$400</button></td>
+              <td><button class="gameButton medium">$400</button></td>
+              <td><button class="gameButton medium">$400</button></td>
             </tr>
             <tr>
               <td><button class="gameButton hard">$500</button></td>
@@ -127,6 +126,14 @@
               <td><button class="gameButton hard">$500</button></td>
               <td><button class="gameButton hard">$500</button></td>
               <td><button class="gameButton hard">$500</button></td>
+            </tr>
+            <tr>
+              <td><button class="gameButton hard">$600</button></td>
+              <td><button class="gameButton hard">$600</button></td>
+              <td><button class="gameButton hard">$600</button></td>
+              <td><button class="gameButton hard">$600</button></td>
+              <td><button class="gameButton hard">$600</button></td>
+              <td><button class="gameButton hard">$600</button></td>
             </tr>
           </tbody>
         </table>
