Centered game pieces.

--- a/index.html
+++ b/index.html
@@ -28,11 +28,15 @@
       </div>
     </div>
 
+    <br>
+
     <div class="row startBtnRow">
       <div class="col-md-12">
         <button id="startBtn">START</button>
       </div>
     </div>
+
+    <br>
 
     <!-- Facebook Login Button -->
     <div class="row facebook-login-row">
@@ -42,44 +46,50 @@
       </div>
     </div>
 
+    <br>
 
-    <!-- Questions and Answers PopUp -->
-    <div id="questions" class="row question-popup-row">
-      <div class="col-md-12">
-        <div class="question-popup"></div>
-        <div class="question"></div>
-        <div id="choices-div"></div>
-      </div>
-    </div>
-
-    <div class = "row scoreRow">
+    <div class="row">
       <!-- Player Name and Score -->
-      <div>
+      <div class="scoreRow">
         <div id="player1" class="players col-md-12">Player</div>
         <div id="player1Score" class="scores col-md-12">Score</div>
         <!-- <div id="player2" class="players col-md-12">Player 2</div>
-          <div id="player2Score" class="scores col-md-12">Score</div> -->
+      <div id="player2Score" class="scores col-md-12">Score</div> -->
       </div>
-</div>
 
-      <!-- this is where our messages will be displayed -->
-      <!-- <div id="chat-box" class="text-left well"></div> -->
+      <br>
 
-      <!-- form to input our user name -->
-      <!-- <form id="name-form">
+      <!-- Questions and Answers PopUp -->
+      <div id="questions" class="row question-popup-row">
+        <div class="col-md-12">
+          <div class="question-popup"></div>
+          <div class="question"></div>
+          <div id="choices-div"></div>
+        </div>
+      </div>
+
+    </div>
+
+    <!-- this is where our messages will be displayed -->
+    <!-- <div id="chat-box" class="text-left well"></div> -->
+
+    <!-- form to input our user name -->
+    <!-- <form id="name-form">
           <input type="text" placeholder="Enter Name" id="name-input">
           <button id="name-submit">Submit</button>
         </form> -->
 
-      <!-- form to input our messages -->
-      <!-- <form id="message-form">
+    <!-- form to input our messages -->
+    <!-- <form id="message-form">
           <input type="text" placeholder="Enter message" id="message-input">
           <button id="message-submit">Send</button>
         </form>
       </div> -->
 
-      <!-- GAME BOARD ROW -->
-      <div class="row gameRow">
+    <br>
+
+    <!-- GAME BOARD ROW -->
+    <div class="row gameRow">
 
       <!-- THE GAME BOARD -->
       <div class="col-md-12">
