--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
         <!-- Player Names and Scores -->
 
         <div>
-          <div id="player1" class="players col-md-12">Player 1</div>
+          <div class="players col-md-12">
+            <h3 id="player1"></h3></div>
           <div id="player1Score" class="scores col-md-12">Score</div>
           <div id="player2" class="players col-md-12">Player 2</div>
           <div id="player2Score" class="scores col-md-12">Score</div>
